hphp/hack/test/sound_dynamic/typing/targeted_pessimisation/prop2.php.exp
# Original file

     1	<?hh
     2	
     3	<<__SupportDynamicType>>
     4	class C {
     5	  public function __construct(public mixed $m) {}
     6	}


# Original errors

File "prop2.php", line 5, characters 44-45:
Class `C` cannot support dynamic because property `m` cannot be assigned to dynamic (Typing[4402])
  File "prop2.php", line 5, characters 38-42:
  Property `m` has type `mixed`


# Pessimisation log

pessimise:	prop,prop2.php,5,$m


# Pessimised file

     1	<?hh
     2	
     3	<<__SupportDynamicType>>
     4	class C {
     5	  public function __construct(public ?supportdynamic $m) {}
     6	}
     7	


# Errors after pessimisation

No errors
