hphp/hack/test/sound_dynamic/typing/targeted_pessimisation/prop2.php
<?hh

<<__SupportDynamicType>>
class C {
  public function __construct(public mixed $m) {}
}
